# vtcore

lib/: libStreamdu.lib  libconshdu.lib  libkbmdu.lib  libprimdu.lib  litedu.lib  webdu.lib  wordsdu.lib
libconsh/: CMakeLists.txt  files.txt
libkbm/: CMakeLists.txt  files.txt
libprim/: CMakeLists.txt  files.txt
libqconsh/: CMakeLists.txt  files.txt
libqkbm/: CMakeLists.txt
libstream/: CMakeLists.txt
lite/: CMakeLists.txt  files.txt
nlp/: CMakeLists.txt
web/: CMakeLists.txt  files.txt
wn/: CMakeLists.txt
words/: CMakeLists.txt
